--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
 <%= f.text_field :nausea %><br>
 <%= f.label :tickets %>
 <%= f.text_field :tickets %><br><br>
-
-<%= f.submit "Create" %>
+<%= f.label "Admin?" %>
+<%= f.check_box :admin %><br><br>
+<%= f.submit %>
 <%end%>
-
