--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
         <a class="navbar-brand" href="<%= users_path %>"/>Home</a>
         <a class="navbar-brand" href="<%= new_user_path %>"/>Sign Up</a>
         <a class="navbar-brand" href="<%= signin_path %>"/>Sign In</a>
+        <% if session[:user_id] %>
+          <a class="navbar-brand" href="<%= logout_path %>"/>Log Out</a>
+
+        <% end  %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
