--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <h1>User Profile</h1>
 
+<% if flash[:notice] %>
+  <div class="notice"><%= flash[:notice] %></div>
+<% end %>
+
 Name:<%= @user.name %><br>
 Mood: <%= @user.mood %><br>
 Height: <%= @user.height %><br>
@@ -8,3 +12,6 @@ Tickets: <%= @user.tickets %><br>
 <% if @user.admin %>
 <%= "ADMIN" %>
 <% end  %>
+<%= link_to "See attractions", attractions_path %>
+
+<%= link_to "Log Out", logout_path %>
